--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-  <div class="container" data-controller="mediapipe">
+  <div data-controller="mediapipe">
     <video class="input_video"></video>
-    <canvas class="output_canvas" width="1280px" height="720px"></canvas>
+    <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
+    <%= image_tag 'dress1.png', style: 'height:10%;width:10%;', id: 'media-pipe' %>
   </div>
