--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,5 @@
   <div data-controller="mediapipe">
     <video class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
-    <%= image_tag 'dress1.png', style: 'height:10%;width:10%;', id: 'media-pipe' %>
+    <%= image_tag 'tshirt.svg', style: 'height:10%;width:10%;', id: 'media-pipe' %>
   </div>
