--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
   <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
-    <%= image_tag 'tshirt2.png', style: 'display:none', id: 'media-pipe' %>
+    <%= image_tag 'lulu1-try.png', style: 'display:none', id: 'media-pipe' %>
   </div>
