--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
   <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
-    <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
-    <%= image_tag 'lulu1-try.png', style: 'display:none', id: 'media-pipe' %>
+    <div class= "container">
+      <canvas id="mediapipe" class="output_canvas" width="1920px" height="1080px"></canvas>
+      <%= image_tag 'lulu1-try.png', style: 'display:none', id: 'media-pipe' %>
+    </div>
   </div>
+
+<%# @clothing.mediapipe_width can be called in html views %>
+<%# @clothing.image_method %>
