--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
   <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
-    <%= image_tag 'lulu1-try.png', style: 'display:none', id: 'media-pipe' %>
+    <%= image_tag 'dress2.png', style: '', id: 'media-pipe' %>
+    <%# <%= image_tag 'tshirt.png', style: '', id: 'media-pipe' %>
   </div>
