Moncler is boss

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
   <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas" width="1280px" height="720px"></canvas>
-    <%= image_tag 'tshirt.png', style: 'display:none', id: 'media-pipe' %>
+    <%= image_tag 'green-moncler-png.png', style: 'display:none', id: 'media-pipe' %>
   </div>
 
 <%# @clothing.mediapipe_width can be called in html views %>
