--- a/theme-app-extension/blocks/toby-block.liquid
+++ b/theme-app-extension/blocks/toby-block.liquid
@@ -50,7 +50,7 @@
 
 {% schema %}
   {
-    "name": "Image Gallery",
+    "name": "Toby's Gallery",
     "target": "section",
     "stylesheet": "image-gallery.css",
     "javascript": "image-gallery.js",
