made logo inside camera

--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -23,6 +23,7 @@
   {
     "name": "Test App",
     "target": "section",
+    "stylesheet": "app-block.css",
     "templates": ["product"],
     "settings": [
       {
