Added some bootstrap for set up page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
       />
     <script>
       document.addEventListener("DOMContentLoaded", async function() {
-        
+
 
         var SessionToken = window["app-bridge"].actions.SessionToken
         var app = window.app;
@@ -48,8 +48,67 @@
     </script>
   </head>
   <body>
-    <h2>Products</h2>
+<body>
+<h1 class="title" mt-2>STYLEASY Setup</h1>
+  <h2 mt-2> SETUP STYLEASY APP ASAP</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/styleasy/app/assets/images/Setup1.png" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Go to "Online Store" at bottom of left</p>
+  </div>
+  </div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/styleasy/app/assets/images/Setup1.png" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Go to "Online Store" at bottom of left</p>
+  </div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/styleasy/app/assets/images/Setup1.png" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Go to "Online Store" at bottom of left</p>
+  </div>
+    </div>
+        <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/styleasy/app/assets/images/Setup1.png" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Go to "Online Store" at bottom of left</p>
+  </div>
+    </div>
+        <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/styleasy/app/assets/images/Setup1.png" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Go to "Online Store" at bottom of left</p>
+  </div>
+    </div>
+  </div>
+</div>
+
+  <%# <div class="container">
+    <ol class="list">
+      <li class="list-item">Go to "Online Store" at bottom of left</li>
+      <li class="list-item">Click "Themes" from left menu</li>
+      <li class="list-item">Click "Customize"</li>
+      <li class="list-item">Select a product from the drop down at top of page</li>
+      <li class="list-item">Click "Add section" from left menu</li>
+      <li class="list-item">Scroll down to "Apps" and add "Button"</li>
+      <li class="list-item">Scroll down to "Apps" and add "Test-app"</li>
+      <li class="list-item">Reposition "Button" and "Test-app" to desire positon</li>
+      <li class="list-item">Click "AR Camera" button to test</li>
+      <li class="list-item">Click "Save" in top right</li>
+      <li class="list-item">Sit back and wait for all that dollar to some flooding in $$$$</li>
+    </ol>
+  </div> %>
     <div id="products"><br>Loading...</div>
+
     <h2>Webhooks</h2>
 
     <% if @webhooks.present? %>
