--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -7,13 +7,17 @@
 <script type="module" defer="defer"></script>
 
 <div id='AR' style="display:none">
-  {% for image in product.images offset:2 limit:1 %} {% comment %} WE NEED TO SET "PRODUCT" AS A VARIABLE IN SETTINGS IN SCHEMA {% endcomment %}
+  <!-- {% for image in product.images offset:2 limit:1 %} {% comment %} WE NEED TO SET "PRODUCT" AS A VARIABLE IN SETTINGS IN SCHEMA {% endcomment %}
      {% assign imgSrc = image.src | img_url: '600x' %}
-  {% endfor %}
+  {% endfor %} -->
   <video hidden class="input_video"></video>
   <canvas id="mediapipe" class="output_canvas" width="1100px" height="720px"></canvas>
-  <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
-<!-- 	<video class="input_video"></video>
+  {%- if block.settings.image_1 -%}
+    <img src="{{ block.settings.image_1 | image_url: width: 1024 }}" class='hidden' id='media-pipe' width="{{ block.settings.image_1.width }}" height="{{ block.settings.image_1.height }}">
+  {%- endif -%}
+
+  <!-- <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
+	<video class="input_video"></video>
   <canvas class="output_canvas" width="1280px" height="720px"></canvas> -->
 </div>
 
@@ -37,6 +41,11 @@
         "id": "description",
         "label": "Description",
         "default": "A simple app block that shows a grid of images that can be customized by the merchant. Each image can be selected to show a popup with the full-sized image."
+      },
+      {
+        "type": "image_picker",
+        "id": "image_1",
+        "label": "Image 1"
       }
     ]
   }
