image landing fix

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,8 +42,7 @@
 
   <!-- Image section -->
   <div class="mt-5">
-    <%= image_tag "pinkbg.png", style:"position: relative; width: 500px" %>
-    <%= image_tag "hero.png", style:"position: absolute; width: 500px; top: 200px; right: 200px" %>
+    <%= image_tag "stylehero.png", style:"max-width:600px" %>
   </div>
 </div>
 
