--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,10 +3,86 @@ body {
   background-color: white;
 }
 
+.cta {
+  background-color: #FFC5ED;
+}
+
 h1 {
   font-size: 4rem;
+}
+
+h2 {
+  font-size: 1.5rem;
 }
 
 p {
   font-size: 1rem;
 }
+
+.bottom-align {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.divider-top {
+  padding-top: 280px;
+}
+
+.divider {
+  padding: 100px;
+}
+
+
+// .arrow,
+// .arrow:before {
+//   position: absolute;
+//   left: 50%;
+// }
+
+// .arrow {
+//   width: 40px;
+//   height: 40px;
+//   top: 50%;
+//   margin: -20px 0 0 -20px;
+//   -webkit-transform: rotate(45deg);
+//   border-left: none;
+//   border-top: none;
+//   border-right: 2px #000 solid;
+//   border-bottom: 2px #000 solid;
+// }
+  
+// .arrow:before {
+//   content: '';
+//   width: 20px;
+//   height: 20px;
+//   top: 50%;
+//   margin: -10px 0 0 -10px;
+//   border-left: none;
+//   border-top: none;
+//   border-right: 1px #000 solid;
+//   border-bottom: 1px #000 solid;
+//   animation-duration: 2s;
+//   animation-iteration-count: infinite;
+//   animation-name: arrow;
+// }
+  
+// @keyframes arrow {
+//   0% {
+//     opacity: 1; }
+//   100% {
+//     opacity: 0;
+//     transform: translate(-10px, -10px); } }
+
+  
+  
+  
+  
