--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -7,20 +7,20 @@
 <script type="module" defer="defer"></script>
 
 <div id='AR' style="display:none">
-  <!-- {% for image in product.images offset:2 limit:1 %} {% comment %} WE NEED TO SET "PRODUCT" AS A VARIABLE IN SETTINGS IN SCHEMA {% endcomment %}
-     {% assign imgSrc = image.src | img_url: '600x' %}
-  {% endfor %} -->
+  {% assign image = product.images | last %} {% comment %} WE NEED TO SET "PRODUCT" AS A VARIABLE IN SETTINGS IN SCHEMA {% endcomment %}
+  {% assign imgSrc = image.src | img_url: '600x' %}
   <video hidden class="input_video"></video>
   <canvas id="mediapipe" class="output_canvas" width="1100px" height="720px"></canvas>
-  {%- if block.settings.image_1 -%}
-    <img src="{{ block.settings.image_1 | image_url: width: 1024 }}" class='hidden' id='media-pipe' width="{{ block.settings.image_1.width }}" height="{{ block.settings.image_1.height }}">
-  {%- endif -%}
 
-  <!-- <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
-	<video class="input_video"></video>
+  <!-- image_picker stuff -->
+  <!-- {%- if block.settings.image_1 -%}
+    <img src="{{ block.settings.image_1 | image_url: width: 1024 }}" class='hidden' id='media-pipe' width="{{ block.settings.image_1.width }}" height="{{ block.settings.image_1.height }}">
+  {%- endif -%} -->
+
+  <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
+	<!-- <video hidden class="input_video"></video>
   <canvas class="output_canvas" width="1280px" height="720px"></canvas> -->
 </div>
-
 
 <script src="{{ 'mediapipe.js' | asset_url }}" defer></script>
 
@@ -42,11 +42,6 @@
         "id": "description",
         "label": "Description",
         "default": "A simple app block that shows a grid of images that can be customized by the merchant. Each image can be selected to show a popup with the full-sized image."
-      },
-      {
-        "type": "image_picker",
-        "id": "image_1",
-        "label": "Image 1"
       }
     ]
   }
