--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,10 +37,15 @@ p {
   padding-top: 280px;
 }
 
+@media (max-width: 1300px) {
+  .divider-top {
+    padding-top: 120px; 
+  }
+}
+
 .divider {
   padding: 100px;
 }
-
 
 // .arrow,
 // .arrow:before {
