--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,7 +46,7 @@
 </div>
 <div class="divider-top">
 </div>
-<div class="container d-flex justify-content-around mx-5 mb-5">
+<div class="container d-flex justify-content-around mb-5">
   <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas rounded-3" width="800px" height="450px"></canvas>
