added responsiveness and spacing

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,6 +39,12 @@ p {
 
 @media (max-width: 1300px) {
   .divider-top {
+    padding-top: 160px; 
+  }
+}
+
+@media (max-width: 900px) {
+  .divider-top {
     padding-top: 120px; 
   }
 }
