--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,7 @@
   </div>
 </div>
 <!-- Demo section -->
-<div class="container text-center mb-3 bottom-align">
+<div class="container text-center mt-3 mb-3 bottom-align">
   <h2>
     <strong>How it works</strong>
   </h2>
@@ -63,6 +63,8 @@
       Bringing the store to you 
     </h2>
   </div>
+</div>
+<div class="divider">
 </div>
 <div class="cta divider">
 <div class="container text-center">
