instructions page done

--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -26,7 +26,7 @@
 
   {% schema %}
   {
-    "name": "Test App",
+    "name": "Styleasy",
     "target": "section",
     "stylesheet": "app-block.css",
     "templates": ["product"],
@@ -35,7 +35,7 @@
         "type": "text",
         "id": "heading",
         "label": "Heading",
-        "default": "Test app"
+        "default": "Styleasy"
       },
       {
         "type": "text",
