--- a/theme-app-extension/blocks/app-embed.liquid
+++ b/theme-app-extension/blocks/app-embed.liquid
@@ -1,6 +1,6 @@
 {% comment %} ADD BUTTON THIS CODE TO ADD-EMBED FILE {% endcomment %}
 <button id='ARbutton' type="submit" name="add" class="product-form__submit button button--full-width button--secondary">
-  <span>AR Dressing Room</span>
+  <span>Online Fitting Room</span>
   <div class="loading-overlay__spinner hidden">
     <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
       <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
