added to change clothes

--- a/theme-app-extension/blocks/app-embed.liquid
+++ b/theme-app-extension/blocks/app-embed.liquid
@@ -72,7 +72,7 @@
   "target": "section",
   "stylesheet": "app-embed.css",
   "javascript": "button.js",
-  "templates": ["product"],
+  "templates": ["product", "index"],
   "settings": []
 }
 {% endschema %}
