Updated code in theme app extension

--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -32,7 +32,7 @@
 
   <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
   <button type="button" onclick="displayPreviousImage()">Previous</button>
-  <button type="button" onclick="displayNextImage()">Next</button>
+  <button id="next" type="button" onclick="displayNextImage()">Next</button>
 
 </div>
 
