modified function to change clothes

--- a/theme-app-extension/blocks/app-block.liquid
+++ b/theme-app-extension/blocks/app-block.liquid
@@ -31,8 +31,8 @@
   {% endcomment %}
 
   <img src="https:{{imgSrc}}" class='hidden' id='media-pipe' width=image.width height=image.height>
-  <button type="button" onclick="displayPreviousImage()">Previous</button>
-  <button id="next" type="button" onclick="displayNextImage()">Next</button>
+  <button style="display: none;" id="prev" type="button" onclick="displayPreviousImage()">Previous</button>
+  <button style="display: none;" id="next" type="button" onclick="displayNextImage()">Next</button>
 
 </div>
 
