modified btn and show explain how to use camera gesture

--- a/theme-app-extension/blocks/app-embed.liquid
+++ b/theme-app-extension/blocks/app-embed.liquid
@@ -7,6 +7,9 @@
     </svg>
   </div>
 </button>
+<div id="explain" style="display:none">
+  <h3>Move your right hand to try the next clothes, left hand to the previous ones!</h3>
+</div>
 
 {% comment %}
 <style>
