--- a/theme-app-extension/blocks/app-embed.liquid
+++ b/theme-app-extension/blocks/app-embed.liquid
@@ -8,7 +8,7 @@
   </div>
 </button>
 <div id="explain" style="display:none">
-  <h3>Move your right hand to try the next clothes, left hand to the previous ones!</h3>
+  <h3>Move your right hand to try the next item, left hand to try the previous one!</h3>
 </div>
 
 {% comment %}
