--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,8 +15,25 @@ h2 {
   font-size: 1.5rem;
 }
 
+h3 {
+  font-size: 1rem;
+}
+
 p {
   font-size: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(30,30,30,0.8)
+}
+
+#snap {
+  scroll-margin-block-start: 110px;
+  /*Adds margin to the top of the viewport*/
+  
+  scroll-margin-block-end: 110pxx;
+  /*Adds margin to the bottom of the viewport*/
 }
 
 .bottom-align {
@@ -27,19 +44,40 @@ p {
   margin: 0 auto;
 }
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  position: relative;
+.divider-top {
+  padding-top: 240px;
 }
 
-.divider-top {
-  padding-top: 280px;
+.avatar {
+  width: 40px;
+  border-radius: 50%;
 }
+
+.avatar-large {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.avatar-bordered {
+  width: 40px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
+.avatar-square {
+  width: 40px;
+  border-radius: 0px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
 
 @media (max-width: 1300px) {
   .divider-top {
-    padding-top: 160px; 
+    padding-top: 120px; 
   }
 }
 
@@ -50,7 +88,7 @@ p {
 }
 
 .divider {
-  padding: 100px;
+  padding: 60px;
 }
 
 // .arrow,
