--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
       </h2>
     </div>
     <div class="container text-left mt-5">
-      <a target="_blank" href="https://styleasy.herokuapp.com/login" class="btn btn-primary btn-lg">
+      <a target="_blank" href="https://www.styleasy.org/login" class="btn btn-primary btn-lg">
         <p class="m-1">Integrate with Shopify
           <i class="fab fa-shopify"></i>
         </p>
@@ -48,11 +48,11 @@
 </div>
 <div class="container d-flex justify-content-center mb-5">
   <div class="container ms-5">
-  <%= image_tag "toby-edit.png", class:"rounded-3 mt-5", style:"height:550px;max-width:600px;object-fit:fill" %>
-  <%# <div data-controller="mediapipe">
+    <%= image_tag "toby-edit.png", class:"rounded-3 mt-5", style:"height:550px;max-width:600px;object-fit:fill" %>
+    <%# <div data-controller="mediapipe">
     <video hidden class="input_video"></video>
     <canvas id="mediapipe" class="output_canvas rounded-3" width="800px" height="450px"></canvas>
-    <%= image_tag 'green-moncler-png.png', style: 'display:none', id: 'media-pipe' %> 
+    <%= image_tag 'green-moncler-png.png', style: 'display:none', id: 'media-pipe' %>
   </div>
   <div class="container d-flex flex-column justify-content-center text-left ms-3 me-0">
     <h1>
@@ -61,7 +61,7 @@
     <h1>
       ONLINE SHOPPING
     </h1>
-        <h2 class="lh-base">
+    <h2 class="lh-base">
       With any camera, your customers can try on your shop's fashion
     </h2>
   </div>
@@ -69,18 +69,16 @@
 <div class="divider">
 </div>
 <div class="cta divider">
-
-<div class="container text-center">
-  <h2>
-    <strong>HIGHER SALES.  FEWER RETURNS.</strong>🎉
-  </h2>
-  <div class="container text-center mt-3">
-    <a target="_blank" href="https://styleasy.herokuapp.com/login" class="btn btn-info btn-lg">
-      <p class="m-1">Integrate with Shopify
-        <i class="fab fa-shopify"></i>
-      </p>
-    </a>
-  </div>
-
+  <div class="container text-center">
+    <h2>
+      <strong>HIGHER SALES.  FEWER RETURNS.</strong>🎉
+    </h2>
+    <div class="container text-center mt-3">
+      <a target="_blank" href="https://www.styleasy.org/login" class="btn btn-info btn-lg">
+        <p class="m-1">Integrate with Shopify
+          <i class="fab fa-shopify"></i>
+        </p>
+      </a>
+    </div>
   </div>
 </div>
