--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,7 +70,6 @@
 </div>
 <div class="divider">
 </div>
-
 <h1 class="mt-3 mb-5" style="text-align: center">
   OUR CUSTOMERS
 </h1>
@@ -96,10 +95,9 @@
           <h3 class="card-title ms-1">Styleasy is amazing!</h3>
         </div>
       </div>
-        <p class="container card-text py-3"><i>"Love the instant ability for my customers to see what they look like in my designs "</i></p>
+      <p class="container card-text py-3"><i>"Love the instant ability for my customers to see what they look like in my designs "</i></p>
     </div>
   </div>
-
   <div class="card m-3" style="width: 24rem;">
     <div class="card-body">
       <div class="container d-flex justify-content-start align-items-center">
@@ -109,23 +107,23 @@
           <h3 class="card-title ms-1">Pika pika</h3>
         </div>
       </div>
-        <p class="container card-text py-3"><i>"Pikachuuuuuuuuuuuu"</i></p>
+      <p class="container card-text py-3"><i>"Pikachuuuuuuuuuuuu"</i></p>
     </div>
   </div>
 </div>
-  <div class="divider">
-  </div>
-  <div class="cta divider">
-    <div class="container text-center">
-      <h2>
-        <strong>HIGHER SALES.  FEWER RETURNS.</strong>🎉
-      </h2>
-      <div class="container text-center mt-3">
-        <a target="_blank" href="https://styleasy.herokuapp.com/login" class="btn btn-info btn-lg">
-          <p class="m-1">Integrate with Shopify
-            <i class="fab fa-shopify"></i>
-          </p>
-        </a>
-      </div>
+<div class="divider">
+</div>
+<div class="cta divider">
+  <div class="container text-center">
+    <h2>
+      <strong>HIGHER SALES.  FEWER RETURNS.</strong>🎉
+    </h2>
+    <div class="container text-center mt-3">
+      <a target="_blank" href="https://www.styleasy.org/login" class="btn btn-info btn-lg">
+        <p class="m-1">Integrate with Shopify
+          <i class="fab fa-shopify"></i>
+        </p>
+      </a>
     </div>
   </div>
+</div>
